--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="hitung">Hitung</string>
     <string name="HitungSegitiga">Hitung Segitga</string>
     <string name="hasil">hasil</string>
+    <string name="luas_x">luas: %1$.2f</string>
 </resources>
